BL-4025 Fix ISBN label and number alignment

--- a/src/BloomBrowserUI/templates/xMatter/bloom-xmatter-common.less
+++ b/src/BloomBrowserUI/templates/xMatter/bloom-xmatter-common.less
@@ -502,7 +502,7 @@ BODY[bookcreationtype="translation"] {
         text-align: left !important; //even if everything else is centered (including the ISBN Block) this needs to be tight against the label
         width: 4.3cm !important;
         display: inline-block;
-        vertical-align: text-top;
+        //vertical-align: text-top; without this the number and label align perfectly
         max-height: 1.8em;
         min-height: 1.8em;
     }
